<resources>
    <string name="app_name">DaltonicGame</string>
    <string name="remaining_time">Remaining time:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="brown">Brown</string>
    <string name="orange">Orange</string>
    <string name="right_answers">Right answers:</string>
    <string name="time_is_over">"Your time is over!"</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="input_name">Input your name:</string>
    <string name="top">Top:</string>
    <string name="result">Result</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="clear">Clear</string>
    <string name="rating">Rating</string>
    <string name="exit">Exit</string>
    <string name="choose_game_mode">Choose game mode:</string>
</resources>

