<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yogurt"
    tools:context=".RatingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:gravity="center"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top"
            android:layout_margin="@dimen/marginStd"/>
        <Button
            android:id="@+id/ratingClearButton"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button"
            android:text="@string/clear"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="@dimen/marginStd"
            android:layout_margin="@dimen/marginStd"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <TextView
            android:layout_margin="@dimen/marginStd"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"/>
        <TextView
            android:layout_weight="0"
            android:layout_margin="@dimen/marginStd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="% of right "/>
        <TextView
            android:gravity="end"
            android:layout_margin="@dimen/marginStd"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_margin="@dimen/marginStd"
        android:id="@+id/topRecyclerView"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>