<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/infoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/timeInfoLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                android:text="@string/remaining_time"/>
            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/right_answers"
                android:textColor="@color/black"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/rightAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="@dimen/bigInfoSize"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/answerButton1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/marginStd"
                android:text=""/>
            <Button
                android:id="@+id/answerButton2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/marginStd"
                android:text=""/>
            <Button
                android:id="@+id/answerButton3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/marginStd"
                android:text=""/>
            <Button
                android:id="@+id/answerButton4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/marginStd"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/answerButton5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/marginStd"/>
            <Button
                android:id="@+id/answerButton6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/marginStd"/>
            <Button
                android:id="@+id/answerButton7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/marginStd"/>
            <Button
                android:id="@+id/answerButton8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/marginStd"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/startButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:layout_margin="@dimen/marginStd"/>
            <Button
                android:id="@+id/stopButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/stop"
                android:textAllCaps="false"
                android:layout_margin="@dimen/marginStd"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>